[package]
name = "wasm_password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
wasm-bindgen = "0.2.80"

[lib]
crate-type =["cdylib"]